--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.50793654" />
+        app:layout_constraintGuide_percent="0.45" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/imgLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
 
+        android:layout_marginBottom="1dp"
         android:background="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
@@ -41,23 +44,24 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
-        android:layout_height="278dp"
+        android:layout_height="318dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline">
 
         <Button
             android:id="@+id/bColeccion"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="128dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="64dp"
             android:layout_marginEnd="128dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/blue_buttons"
             android:padding="10dp"
             android:text="@string/bCol"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
+            android:textSize="20dp"
             app:layout_constraintBottom_toTopOf="@+id/bImagen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +70,7 @@
         <Button
             android:id="@+id/bImagen"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="128dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="128dp"
@@ -76,6 +80,7 @@
             android:text="@string/bImg"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
