--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary"> #6c1dc3</color>
+    <color name="colorPrimary">#6c1dc3</color>
     <color name="colorPrimaryDark">#6d1fc3</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorButton"> #68b9ed</color>
+    <color name="colorButton"> #068FE9</color>
 </resources>
